@@ -50,8 +50,10 @@ public class JobsPayment14Listener implements Listener {
 	    if (jPlayer == null)
 		return;
 
-	    Jobs.action(jPlayer, new ItemActionInfo(event.getResult(), ActionType.BAKE));
-	    it.remove();
+	    Jobs.action(jPlayer, new ItemActionInfo(event.getSource(), ActionType.BAKE));
+	    if (camps.getValue().getItem().equals(event.getSource())) {
+		it.remove();
+	    }
 	}
     }
 
